kubernetes/apps/base/media/arr/seerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seerr.theblacklodge.dev`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
